# fabric-ai-ops-platform

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  pr-checks.yml
docs/: architecture.md  cost_governance.md  runbook.md  security_design.md
infra/bicep/: main.bicep
infra/bicep/modules/: aisearch.bicep  entra.md  keyvault.bicep  monitoring.bicep
notebooks/: 01_bronze_exploration.ipynb  04_drift_analysis.ipynb
power_platform/: README.md
src/aiops/: drift_detector.py  evaluator.py  monitor.py
src/az/ai_search/: indexer.py  search_client.py
src/az/keyvault/: secret_client.py
src/common/: config.py  exceptions.py  logging_setup.py
src/fabric/lakehouse/: bronze_ingest.py  data_sources.py  gold_aggregate.py  schema_registry.py  silver_transform.py
src/fabric/pipelines/: orchestrator.py
src/fabric/sql_analytics/: gold_views.sql  semantic_model_queries.sql
src/genai/: assistant.py  prompt_templates.py  rag_chain.py
tests/: conftest.py
tests/unit/: test_bronze_ingest.py  test_drift_detector.py  test_rag_chain.py  test_secret_client.py
