[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fabric-ai-ops-platform"
version = "0.1.0"
description = "Production-grade Data & AI platform: Microsoft Fabric Medallion Lakehouse, Azure OpenAI RAG assistant, AI-Ops drift detection, Azure DevOps CI/CD"
requires-python = ">=3.11"
dependencies = [
    "azure-identity>=1.16",
    "azure-keyvault-secrets>=4.8",
    "azure-search-documents>=11.6",
    "azure-monitor-opentelemetry>=1.3",
    "opentelemetry-sdk>=1.24",
    "openai>=1.30",
    "pyspark>=3.5",
    "delta-spark>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "scipy>=1.13",
    "numpy>=1.26",
    "pandas>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501", "N812", "N818", "SIM117"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing -q"
asyncio_mode = "auto"
